--- a/sb_validate.css
+++ b/sb_validate.css
@@ -13,3 +13,14 @@
 
 
 /* Validation Styles */
+input:focus:not([type='radio']) {
+    background: rgb(255, 218, 165);
+}
+
+input:focus:valid:not([type='radio']) {
+    background: rgb(215, 218, 165) url(sb_valid.png) bottom right/contain no-repeat;
+}
+
+input:focus:invalid:not([type='radio']) {
+    background: rgb(255, 245, 215) url(sb_invalid.png) bottom right/contain no-repeat;
+}
